Finalise changes based on plugin submission review. (Organisation & code cleanup)

--- a/ErrorLogger/ErrorLogger.csproj
+++ b/ErrorLogger/ErrorLogger.csproj
@@ -90,6 +90,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="ErrorLogger.cs" />
     <Compile Include="EventHandlers.cs" />
